# zempo

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
work_tracker/accounts/: forms.py  middleware.py  models.py  urls.py  views.py
work_tracker/accounts/admin/: __init__.py  account.py  organization.py  user.py
work_tracker/accounts/migrations/: 0001_initial.py  0002_create_organization_admin_group.py
work_tracker/static/: manifest.json  sw.js
work_tracker/templates/: base.html  landing.html
work_tracker/templates/accounts/: create_org.html  login.html  register.html
work_tracker/templates/tracking/: home.html
work_tracker/tracking/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
work_tracker/tracking/migrations/: 0001_initial.py
work_tracker/tracking/services/: excel_export.py
work_tracker/tracking/templatetags/: custom_filters.py
work_tracker/work_tracker/: settings.py  urls.py
